--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -19,9 +19,12 @@
                 <thead>
                     <tr>
                         <!--creamos cabeceras-->
-                        <th>Nombre</th>
-                        <th>Lenguaje</th>
-                        <th>Nivel</th>
+                        <th>Worker ID</th>
+                        <th>Last Name</th>
+                        <th>First Name</th>
+                        <th>Full Name</th>
+                        <th>Contact Email</th>
+                        <th>Username</th>
                     </tr>
                 </thead>
                 <tbody id="res">
